# vault_migration

./: .gitignore  migrate.py  mise.toml  names.py  pyproject.toml  readme.md  tests.py  users.py
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: crosswalk.html  crosswalk.md
migrate/: api.py  archives_series.json  convert_subjects.py  course_work.py  import.py  maps.py  mk_subjects.py  names.py  readme.md  record.py  subjects.py  subjects_map.json  tests.py  utils.py
taxos/: Archives Series.json  Majors.json  Mudflats Series.json  Work Type Broad.json  Work Type Specific.json  aat.py  accreditation-documents.json  all.json  archives-series-complete.json  ccac-subject.json  library-collections.yaml  names.csv  names_csv.py  names_vocab.py  readme.md  roles.py  subject name.json  subject-name-complete.json  subject-name-missing.csv  temporal subjects.json  type-of-resource.yaml  users.py
vocab/: programs.yaml  readme.md  sync  test_users.yaml
