[project]
name = "vault-migration"
version = "0.1.0"
description = "tools, data, & ideas for EQUELLA -> Invenio migration"
authors = [{name = "Eric Phetteplace", email = "ephetteplace@cca.edu"}]
license = "ECL-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "xmltodict==1.0.2",
    "spacy==3.8.7",
    "edtf==5.0.0",
    "click==8.3.0",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]
