[project]
name = "vault-migration"
version = "0.1.0"
description = "tools, data, & ideas for EQUELLA -> Invenio migration"
authors = [{name = "Eric Phetteplace", email = "ephetteplace@cca.edu"}]
license = "ECL-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "click==8.3.0",
    "edtf==5.0.0",
    # if we don't specify the spacy model as a dependency uv will prune it
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "spacy==3.8.7",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning",
]
