[project]
name = "vault-migration"
version = "0.1.0"
description = "tools, data, & ideas for EQUELLA -> Invenio migration"
authors = [{name = "Eric Phetteplace", email = "ephetteplace@cca.edu"}]
license = "ECL-2.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "click==8.3.0",
    "edtf==5.0.0",
    # if we don't specify the spacy model as a dependency uv will prune it
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "spacy==3.8.8",
]

[dependency-groups]
dev = [
    "pytest==9.0.1",
]

[tool.pytest]
addopts = ["--verbose"]
testpaths = [
    "migrate/tests.py",
]
